Fix spacing between sections

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -30,14 +30,19 @@
     gap: 0.5rem;
 }
 
-.bio-left .resume-btn {
+.about-resume-btn {
+    font-size: 14px;
+    border: 1px solid var(--main-accent);
+    color: var(--main-accent);
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
     font-size: clamp(16px, 7vw, 18px);
 }
 
 @media (max-width: 750px) {
     .bio {
         flex-direction: column;
-        gap: 1rem;
+        gap: 2rem;
     }
 
     .bio-right {
